--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "lite-server code/index.html",
+    "dev": "lite-server index.html",
     "test": "jest"
   },
   "keywords": [],
