--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "lite-server index.html",
+    "dev": "node server.js",
     "test": "jest"
   },
   "keywords": [],
@@ -14,23 +14,23 @@
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "express": "^4.18.1",
     "jest": "^28.1.0",
-    "lite-server": "^2.6.1",
     "prettier": "2.6.2"
   },
   "eslintConfig": {
     "extends": [
       "eslint:recommended",
       "plugin:prettier/recommended"
-    ], 
-      "parserOptions": {
-          "ecmaVersion": 2017
-      },
-      "env": {
-          "es6": true
-      }
-      ,"rules":{
-        "no-undef": "off"
-      }
+    ],
+    "parserOptions": {
+      "ecmaVersion": 2017
+    },
+    "env": {
+      "es6": true
+    },
+    "rules": {
+      "no-undef": "off"
+    }
   }
 }
